--- a/theSAURUSQ/main/templates/detail.html
+++ b/theSAURUSQ/main/templates/detail.html
@@ -34,16 +34,10 @@
                     <a class="nav-link" href="#">Home </a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Questions</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/main/question/add/">Ask Questions</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Ask</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tags</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/main/comment/add/">Comments</a>
                     </li>
                 </ul>
             </div>
