--- a/theSAURUSQ/main/templates/login.html
+++ b/theSAURUSQ/main/templates/login.html
@@ -16,6 +16,7 @@
                 {{login}}<br>
             {% endfor %}
             <button type="submit">Login</button>
+            <a href="/signup"><button type="button">Sign Up</button></a>
         </form>
     </body>
 </html>
