--- a/theSAURUSQ/main/templates/home.html
+++ b/theSAURUSQ/main/templates/home.html
@@ -1,3 +1,4 @@
+{% if request.user.is_authenticated  %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -20,19 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                    <a class="nav-link" href="#">Home </a>
+                    <a class="nav-link" href="/">Home </a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Questions</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/main/question/add/">Ask Questions</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Ask</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/main/comment/add/">Comments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tags</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="http://127.0.0.1:8000/logout">Log out</a>
                     </li>
                 </ul>
             </div>
@@ -94,4 +92,11 @@
       </nav>
 
 </body>
-</html> 
+</html>
+{% endif %}
+{% if not request.user.is_authenticated  %}
+    <h3>
+        You are not Logged In<br>
+        Click the link to <a href="/login">Log In</a>
+    </h3>
+{% endif %}
