--- a/theSAURUSQ/main/templates/signup.html
+++ b/theSAURUSQ/main/templates/signup.html
@@ -31,7 +31,7 @@
                     {{field}}<br>
                 {% endfor %}
                 <button type="submit">Sign Up</button><br>
-                <a href="/login"><button type="submit">Login</button></a><br>       
+                <a href="/login"><button type="button">Login</button></a><br>
             </form>
 
         </div>
