--- a/theSAURUSQ/main/templates/signup.html
+++ b/theSAURUSQ/main/templates/signup.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <html>
     <head>
         <meta charset="UTF-8">
@@ -7,9 +8,12 @@
     <title>Sign up</title>
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'f5.15.2/css/all.min.css' %}"/>
     </head>
     <body>
 
+        
+            
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
             <div class="container">
@@ -23,18 +27,22 @@
 
         </nav>
 
-        <div class="container py-5 col-md-8 offset-2">
+        <div class="container py-5 col-md-8 offset-2 col-1">
 
             <form method="POST" action="/signup">
                 {% for field in form %}
                     {{field.label}}<br>
                     {{field}}<br>
                 {% endfor %}
-                <button type="submit">Sign Up</button><br>
-                <a href="/login"><button type="button">Login</button></a><br>
+                <button class="mt-3" type="submit">Sign Up</button><br>
+                <a href="/login"><button class="mt-3" type="button">Login</button></a><br>
             </form>
 
         </div>
+
+    
+
+        
 
         
     </body>
