--- a/theSAURUSQ/main/templates/login.html
+++ b/theSAURUSQ/main/templates/login.html
@@ -17,13 +17,17 @@
     <link rel="stylesheet" href="{% static 'f5.15.2/css/all.min.css' %}"/>
     </head>
     <body>
-        <form action="/login" method="POST">
-            {% for login in form %}
-                {{login.label}}<br>
-                {{login}}<br>
-            {% endfor %}
-            <button type="submit">Login</button>
-            <a href="/signup"><button type="button">Sign Up</button></a>
-        </form>
+
+        <div class="container">
+            <form action="/login" method="POST">
+                {% for login in form %}
+                    {{login.label}}<br>
+                    {{login}}<br>
+                {% endfor %}
+                <button class="mt-3" type="submit">Login</button>
+                <a href="/signup"><button class="mt-3" type="button">Sign Up</button></a>
+            </form>
+        </div>
+        
     </body>
 </html>
