--- a/theSAURUSQ/main/templates/login.html
+++ b/theSAURUSQ/main/templates/login.html
@@ -15,16 +15,20 @@
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}"/>
     <!--  Font Awesome-->
     <link rel="stylesheet" href="{% static 'f5.15.2/css/all.min.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/login.css' %}"/>
     </head>
     <body>
+    <div class="name">
+        THESAURUS
+    </div>
 
         <div class="container">
             <form action="/login" method="POST">
                 {% for login in form %}
-                    {{login.label}}<br>
+                    <label>{{login.label}}</label><br>
                     {{login}}<br>
                 {% endfor %}
-                <button class="mt-3" type="submit">Login</button>
+                <button class="mt-3" type="submit">Login</button><br>
                 <a href="/signup"><button class="mt-3" type="button">Sign Up</button></a>
             </form>
         </div>
